# monkdb-mcp

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTOR_LICENSE_AGGREMENT.md  README.md  SECURITY.md
mcp_monkdb/: README.md  pyproject.toml
mcp_monkdb/src/mcp_monkdb/: __init__.py  env_vals.py  main.py  mcp_server.py  otel_setup.py
mcp_monkdb/tests/: .env.test  test_mcp_monkdb_tools.py
typescript/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
typescript/src/: config.mts  config.ts  index.mts  index.ts  monkdbClient.mts  monkdbClient.ts  server.mts
typescript/src/tools/: describeTable.ts  getServerVersion.ts  healthCheck.ts  listTables.ts  runSelectQuery.ts
typescript/tests/: mcpServer.test.mts
