[project]
name = "mcp-monkdb"
version = "0.2.4"
description = "An MCP server for MonkDB"
license = "Apache-2.0"
authors = [
    { name = "MonkDB Developers", email = "devs@monkdb.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.3.0",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
    "pip-system-certs>=4.0",
    "monkdb>=1.0.5"
]

# ------------------------------
# REQUIRED FOR PIP EXTRAS
# ------------------------------
[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

otel = [
    "opentelemetry-api",                       # Provides the core API (trace, metrics, etc.)
    "opentelemetry-sdk",                       # The SDK implementations
    "opentelemetry-instrumentation",           # Base instrumentation library
    "opentelemetry-exporter-otlp",             # OTLP exporter
    "opentelemetry-instrumentation-fastapi",   # FastAPI instrumentation
    "opentelemetry-instrumentation-requests", # Requests instrumentation
]

[project.scripts]
mcp-monkdb = "mcp_monkdb.main:main"

[project.urls]
Home = "https://github.com/monkdbofficial/monkdb-mcp"

# ------------------------------
# POETRY GROUPS (ignored by pip but OK to keep)
# ------------------------------
[tool.poetry]
packages = [{ include = "mcp_monkdb", from = "src" }]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "*"
pytest = "*"

[tool.poetry.group.otel]
optional = true

[tool.poetry.group.otel.dependencies]
opentelemetry-api = "*"
opentelemetry-sdk = "*"
opentelemetry-instrumentation = "*"
opentelemetry-exporter-otlp = "*"
opentelemetry-instrumentation-fastapi = "*"
opentelemetry-instrumentation-requests = "*"

# ------------------------------
# HATCH BUILD
# ------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/mcp_monkdb"]

# ------------------------------
# RUFF CONFIG
# ------------------------------
[tool.ruff]
line-length = 100

# ------------------------------
# BUILD SYSTEM
# ------------------------------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
